--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,6 +153,7 @@ jobs:
       - name: Gather cask information
         id: info
         run: |
+          brew tap homebrew/cask-fonts
           brew ruby <<'EOF'
             require 'cask/cask_loader'
             require 'cask/installer'
