--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,6 +154,7 @@ jobs:
         id: info
         run: |
           brew tap homebrew/cask-fonts
+          brew tap bevanjkay/tap
           brew ruby <<'EOF'
             require 'cask/cask_loader'
             require 'cask/installer'
