--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
         uses: Homebrew/actions/setup-homebrew@master
         with:
           test-bot: false
+          cask: true
+          core: false
 
       - name: Check out Pull Request
         uses: actions/checkout@v3
@@ -36,8 +38,6 @@ jobs:
       - name: Generate CI matrix
         id: generate-matrix
         run: |
-          brew tap homebrew/cask
-          brew update
           brew ruby -- "$(brew --repository homebrew/cask)/cmd/lib/generate-matrix.rb" "${{ github.event.pull_request.url }}"
 
   test:
@@ -54,6 +54,8 @@ jobs:
         uses: Homebrew/actions/setup-homebrew@master
         with:
           test-bot: false
+          cask: false
+          core: false
 
       - name: Enable debug mode
         run: |
@@ -153,6 +155,7 @@ jobs:
       - name: Gather cask information
         id: info
         run: |
+          brew tap homebrew/cask-versions
           brew tap homebrew/cask-fonts
           brew tap bevanjkay/tap
           brew ruby <<'EOF'
