.github/workflows/ci.yml: fix style

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,19 +93,19 @@ jobs:
       - name: Clean up CI machine
         run: |
           if ! brew uninstall --cask julia && ! rm -r /Applications/Julia-*.app; then
-            echo '::warning::Removing Julia is no longer necessary.'
+            echo "::warning::Removing Julia is no longer necessary."
           fi
 
           if ! rm /usr/local/bin/dotnet; then
-            echo '::warning::Removing `dotnet` symlink is no longer necessary.'
+            echo "::warning::Removing \`dotnet\` symlink is no longer necessary."
           fi
 
           if ! rm /usr/local/bin/pod; then
-            echo '::warning::Removing `cocoapods` symlink is no longer necessary.'
+            echo "::warning::Removing \`cocoapods\` symlink is no longer necessary."
           fi
 
           if ! rm /usr/local/bin/chromedriver; then
-            echo '::warning::Removing `chromedriver` symlink is no longer necessary.'
+            echo "::warning::Removing \`chromedriver\` symlink is no longer necessary."
           fi
 
           brew unlink python && brew link --overwrite python
