--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,9 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
 
       - name: Dependent taps
-        run: brew tap bevanjkay/formulae
+        run: |
+          brew tap bevanjkay/formulae
+          brew tap bevanjkay/tap
 
       - name: Run brew readall ${{ matrix.tap }}
         id: readall
