--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ env:
   HOMEBREW_DEVELOPER: 1
   HOMEBREW_NO_AUTO_UPDATE: 1
   HOMEBREW_NO_INSTALL_FROM_API: 1
-  HOMEBREW_GITHUB_API_TOKEN: ${{ github.token }}
+  HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.TOKEN }}
 
 concurrency:
   group: "${{ github.ref }}"
