--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,6 +121,8 @@ jobs:
         run: |
           brew tap bevanjkay/formulae
           brew tap bevanjkay/tap
+        if: always() && matrix.cask
+
 
       - name: Run brew test-bot --only-tap-syntax
         id: tap-syntax
@@ -136,17 +138,6 @@ jobs:
           always() &&
           contains(fromJSON('["success", "skipped"]'), steps.tap-syntax.outcome) &&
           matrix.cask
-
-      - name: Run brew audit --cask${{ (matrix.cask && ' ') || ' --tap ' }}${{ matrix.cask.token || matrix.tap }}
-        id: audit
-        run: |
-          brew audit --cask ${{ join(matrix.audit_args, ' ') }}${{ (matrix.cask && ' ') || ' --tap ' }}'${{ matrix.cask.token || matrix.tap }}'
-        timeout-minutes: 30
-        if: >
-          always() &&
-          contains(fromJSON('["success", "skipped"]'), steps.tap-syntax.outcome) &&
-          (!matrix.cask || steps.fetch.outcome == 'success') &&
-          !matrix.skip_audit
 
       - name: Gather cask information
         id: info
@@ -169,8 +160,8 @@ jobs:
               true
             end
 
-            cask_conflicts = cask.conflicts_with&.dig(:cask).to_a.select { |c| Cask::CaskLoader.load(c).installed? }
-            formula_conflicts = cask.conflicts_with&.dig(:formula).to_a.select { |f| Formula[f].any_version_installed? }
+            cask_conflicts = cask.conflicts_with&.dig(:cask).to_a
+            formula_conflicts = cask.conflicts_with&.dig(:formula).to_a
 
             installer = Cask::Installer.new(cask)
             cask_and_formula_dependencies = installer.missing_cask_and_formula_dependencies
@@ -184,32 +175,43 @@ jobs:
               end
               
               File.open(ENV.fetch("GITHUB_ENV"), "a") do |f|
-              f.puts "CASK_CONFLICTS=\"#{cask_conflicts&.join(" ")}\"" if cask_conflicts.present?
-              f.puts "CASK_DEPENDENCIES=\"#{cask_dependencies&.join(" ")}\"" if cask_dependencies.present?
-              f.puts "FORMULA_CONFLICTS=\"#{formula_conflicts&.join(" ")}\"" if formula_conflicts.present?
-              f.puts "FORMULA_DEPENDENCIES=\"#{formula_dependencies&.join(" ")}\"" if formula_dependencies.present?
+              f.puts "CASK_CONFLICTS=#{cask_conflicts&.join(" ")}" if cask_conflicts.present?
+              f.puts "CASK_DEPENDENCIES=#{cask_dependencies&.join(" ")}" if cask_dependencies.present?
+              f.puts "FORMULA_CONFLICTS=#{formula_conflicts&.join(" ")}" if formula_conflicts.present?
+              f.puts "FORMULA_DEPENDENCIES=#{formula_dependencies&.join(" ")}" if formula_dependencies.present?
             end
           EOF
         if: always() && steps.fetch.outcome == 'success' && matrix.cask
 
       - name: Install formula dependencies
         run: |
-          # shellcheck disable=SC2086
-          brew install --formula $FORMULA_DEPENDENCIES
-        if: always() && matrix.cask && join(fromJSON(steps.info.outputs.formula_dependencies)) != ''
+          read -r -a formula_dependencies_array <<< "$FORMULA_DEPENDENCIES"
+          brew install --formula "${formula_dependencies_array[@]}"
+        if: ${{ always() && matrix.cask && env.FORMULA_DEPENDENCIES != '' }}
         timeout-minutes: 30
+
+      - name: Run brew audit --cask${{ (matrix.cask && ' ') || ' --tap ' }}${{ matrix.cask.token || matrix.tap }}
+        id: audit
+        run: |
+          brew audit --cask ${{ join(matrix.audit_args, ' ') }}${{ (matrix.cask && ' ') || ' --tap ' }}'${{ matrix.cask.token || matrix.tap }}'
+        timeout-minutes: 30
+        if: >
+          always() &&
+          contains(fromJSON('["success", "skipped"]'), steps.tap-syntax.outcome) &&
+          (!matrix.cask || steps.fetch.outcome == 'success') &&
+          !matrix.skip_audit
 
       - name: Uninstall conflicting formulae
         run: |
-          # shellcheck disable=SC2086
-          brew uninstall --formula $FORMULA_CONFLICTS
+          read -r -a formula_conflicts_array <<< "$FORMULA_CONFLICTS"
+          brew uninstall --formula --force "${formula_conflicts_array[@]}"
         if: ${{ always() && steps.info.outcome == 'success' && env.FORMULA_CONFLICTS != '' }}
         timeout-minutes: 30
   
       - name: Uninstall conflicting casks
         run: |
-          # shellcheck disable=SC2086
-          brew uninstall --cask $CASK_CONFLICTS
+          read -r -a cask_conflicts_array <<< "$CASK_CONFLICTS"
+          brew uninstall --cask --force "${cask_conflicts_array[@]}"
         if: ${{ always() && steps.info.outcome == 'success' && env.CASK_CONFLICTS != '' }}
         timeout-minutes: 30
 
@@ -247,15 +249,15 @@ jobs:
 
       - name: Uninstall formula dependencies
         run: |
-          # shellcheck disable=SC2086
-          brew uninstall --formula $FORMULA_DEPENDENCIES
-        if: always() && steps.install.outcome == 'success' && join(fromJSON(steps.info.outputs.formula_dependencies)) != ''
+          read -r -a formula_dependencies_array <<< "$FORMULA_DEPENDENCIES"
+          brew uninstall --formula "${formula_dependencies_array[@]}"
+        if: ${{ always() && steps.install.outcome == 'success' && env.FORMULA_DEPENDENCIES != '' }}
         timeout-minutes: 30
 
       - name: Uninstall cask dependencies
         run: |
-          # shellcheck disable=SC2086
-          brew uninstall --cask $CASK_DEPENDENCIES
+          read -r -a cask_dependencies_array <<< "$CASK_DEPENDENCIES"
+          brew uninstall --cask "${cask_dependencies_array[@]}"
         if: ${{ always() && steps.install.outcome == 'success' && env.CASK_DEPENDENCIES != '' }}
         timeout-minutes: 30
 
