--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -38,8 +38,9 @@ jobs:
           cask: false
           test-bot: false
 
-      - name: Install tools
-        run: brew install actionlint shellcheck zizmor
+      - uses: Homebrew/actions/cache-homebrew-prefix@main
+        with:
+          install: actionlint shellcheck zizmor
 
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
